--- a/masks/templates/base.html
+++ b/masks/templates/base.html
@@ -105,7 +105,7 @@ Datatables
 <!-- Static navbar -->
 <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">{% trans "Masks" %}</a>
+        <a class="navbar-brand" href="{% url 'listmask' %}">{% trans "Masks" %}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
