--- a/masks/templates/base.html
+++ b/masks/templates/base.html
@@ -112,7 +112,7 @@ Datatables
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#"> Search <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'searchmask' %}"> Search <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">View</a>
