--- a/masks/templates/masks/mask_detail.html
+++ b/masks/templates/masks/mask_detail.html
@@ -3,61 +3,92 @@
 {% load thumbnail %}
 {% block content %}
 
-<div class="jumbotron text-white rounded bg-dark">
-    <h1>Mask Detail</h1>
-</div>
-<table class="table">
-    <tbody>
-    <tr>
-        <td> Name </td>
-        <td> {{ mask.name }} </td>
-    </tr>
-    <tr>
-        <td> Motif </td>
-        <td>
-            {%  for m in mask.motifs.all %}
-                <a href="{% url 'updatemotif' m.id  %}"> {{m.name }} </a>
-                <br>
+    <div class="jumbotron text-white rounded bg-dark">
+        <h1>Mask Detail</h1>
+    </div>
+    <table class="table">
+        <tbody>
+        <tr>
+            <td> Name </td>
+            <td> {{ mask.name }} </td>
+        </tr>
+        <tr>
+            <td> id number </td>
+            <td> {{ mask.idNumber }} </td>
+        </tr>
+        <tr>
+            <td> Usage </td>
+            <td> {{ mask.usage }} </td>
+        </tr>
+        <tr>
+            <td> Motif </td>
+            <td>
+                {%  for m in mask.motifs.all %}
+                    <a href="{% url 'updatemotif' m.id  %}"> {{m.name }} </a>
+                    <br>
+                {% endfor %}
+            </td>
+        </tr>
+        <tr>
+            <td>GDS file</td>
+            <td>{{ mask.GDSFile }}</td>
+        </tr>
+        <tr>
+            <td>Area</td>
+            <td>{{ mask.area }}</td>
+        </tr>
+        <tr>
+            <td>Localisation</td>
+            <td>{{ mask.localisation.localisation }}</td>
+        </tr>
+        <tr>
+            <td>Designer</td>
+            <td>{{ mask.conceptor }}</td>
+        </tr>
+        <tr>
+            <td>Manufacturer</td>
+            <td>{{ mask.manufacturer.corporateName }}</td>
+        </tr>
+        <tr>
+            <td>Polarisation</td>
+            <td>{{ mask.polarisation }}</td>
+        </tr>
+        <tr>
+            <td>Condition</td>
+            <td>{{ mask.condition }}</td>
+        </tr>
+        <tr>
+            <td>Description</td>
+            <td>{{  mask.description }}</td>
+        </tr>
+
+
+        </tbody>
+    </table>
+
+    <div class="row">
+        <div id="links">
+            {% for image in mask.image_set.all %}
+                <a href={{ image.image.url }} title="{{ image.image.name }}" >
+                    <img src="{{ image.image|thumbnail_url:'avatar' }}" alt="{{ image.image.name }}" />
+                </a>
             {% endfor %}
-        </td>
-    </tr>
-    
-    </tbody>
-</table>
+        </div>
+    </div>
 
-
-<form action="" id="fileuploadform" method="post" enctype="multipart/form-data">
-   <div class="form-group">
-        <label>Name:</label>
-        <input class="form-control" readonly type="text" name="name" value="{{ mask.name }}"/>
-    </div>
-    <div class="form-group">
-        <label >Usage:</label>
-        <input class="form-control" readonly type="text" name="name" value="{{ mask.usage }}"/>
-    </div>
-</form>
-<div class="row">
-    <div id="links">
-        {% for image in mask.image_set.all %}
-        <a href={{ image.image.url }} title="{{ image.image.name }}" >
-            <img src="{{ image.image|thumbnail_url:'avatar' }}" alt="{{ image.image.name }}" />
-        </a>
-        {% endfor %}
-    </div>
-</div>
 {% endblock %}
 
 
 {% block javascript %}
-<script src="{% static 'blueimpgallery/Gallery-master/js/blueimp-gallery.min.js' %}" ></script>
-<script>
-document.getElementById('links').onclick = function (event) {
-    event = event || window.event;
-    var target = event.target || event.srcElement,
-        link = target.src ? target.parentNode : target,
-        options = {index: link, event: event},
-        links = this.getElementsByTagName('a');
-    blueimp.Gallery(links, options);
-};
-</script>
+    <script src="{% static 'blueimpgallery/Gallery-master/js/blueimp-gallery.min.js' %}" ></script>
+    <script>
+        document.getElementById('links').onclick = function (event) {
+            event = event || window.event;
+            var target = event.target || event.srcElement,
+                link = target.src ? target.parentNode : target,
+                options = {index: link, event: event},
+                links = this.getElementsByTagName('a');
+            blueimp.Gallery(links, options);
+        };
+    </script>
 {% endblock %}
