--- a/masks/templates/base.html
+++ b/masks/templates/base.html
@@ -103,14 +103,14 @@ Datatables
 <!-- Static navbar -->
 <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">Masks</a>
+        <a class="navbar-brand" href="{% url 'listmask' %}">Masks</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#"> Search <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'searchmask' %}"> Search <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">View</a>
@@ -216,19 +216,40 @@ Datatables
                 dom: 'Bfrtip',
                 lengthMenu: [
                     [ 10, 25, 50, 100,  -1 ],
-                    [ '10 rows', '25 rows', '50 rows', '100 rows', 'Show all' ]
+                    [ '10 lignes', '25 lignes', '50 lignes', '100 lignes', 'Tout' ]
                 ],
 
                 buttons: [
-                    'copy',
-                    'excel',
-                    'print',
-                    'pageLength',
-                    'colvis'
+                     {
+                        extend: 'copy',
+                        text:'Copie',
+                    },
+                    {
+                        extend:'excel',
+                        text:'export vers Excel',
+                    },
+                    {
+                        extend:'print',
+                        text:'Imprime',
+                    },
+                    {
+                        extend: 'pageLength',
+                        text:'Affiche ',
+                    },
+                    {
+                        extend: 'colvis',
+                        text:'Selection colonnes',
+                    }
                 ],
                 colReorder: true,
                 select: true,
-                }
+#                columnDefs: [
+#                    {
+#                        targets: [0,2,3],
+#                        visible: false
+#                    }
+#                ]
+               }
             );
         } );
 </script>
@@ -248,67 +269,6 @@ Datatables
 
 {% block javascript %}
 {% endblock %}
-<!-- Dropzone.js -->
-<!--
-<script src='dropzone.min.js' "></script>
 
-<script src="{% static 'dropzone/5.2.0/js/dropzone.min.js' %}"></script>
-
-<script>
-    // Get the template HTML and remove it from the doumenthe template HTML
-    //and remove it from the doument
-    var previewNode = document.querySelector("#template");
-    previewNode.id = "";
-    var previewTemplate = previewNode.parentNode.innerHTML;
-    previewNode.parentNode.removeChild(previewNode);
-</script>
-<script>
-    var myDropzone = new Dropzone(document.body, { // Make the whole body a dropzone
-        url: "{% url 'createmask' %}", // Set the url
-        thumbnailWidth: 80,
-        thumbnailHeight: 80,
-        parallelUploads: 20,
-        //previewTemplate: previewTemplate,
-        autoQueue: false, // Make sure the files aren't queued until manually added
-        previewsContainer: "#preview", // Define the container to display the previews
-        clickable: "#fileinput-button" // Define the element that should be used as click trigger to select files.
-    });
-    Dropzone.autodiscover = false;
-
-    myDropzone.on("addedfile", function(file) {
-    // Hookup the start button
-        console.log(' added file');
-        file.previewElement.querySelector(".start").onclick = function() { myDropzone.enqueueFile(file); };
-    });
-
-    // Update the total progress bar
-    myDropzone.on("totaluploadprogress", function(progress) {
-        document.querySelector("#total-progress .progress-bar").style.width = progress + "%";
-    });
-
-    myDropzone.on("sending", function(file) {
-        // Show the total progress bar when upload starts
-        document.querySelector("#total-progress").style.opacity = "1";
-        // And disable the start button
-        file.previewElement.querySelector(".start").setAttribute("disabled", "disabled");
-    });
-
-    // Hide the total progress bar when nothing's uploading anymore
-    myDropzone.on("queuecomplete", function(progress) {
-        document.querySelector("#total-progress").style.opacity = "0";
-    });
-
-    // Setup the buttons for all transfers
-    // The "add files" button doesn't need to be setup because the config
-    // `clickable` has already been specified.
-    document.querySelector(".start").onclick = function() {
-        myDropzone.enqueueFiles(myDropzone.getFilesWithStatus(Dropzone.ADDED));
-    };
-
-    document.querySelector(".cancel").onclick = function() {
-        myDropzone.removeAllFiles(true);
-    };
-</script>
--->
 </body>
 </html>
