starts refactoring of code, translation to french, introduce cbv_model_info var in models and show image to delete

--- a/masks/templates/base.html
+++ b/masks/templates/base.html
@@ -242,7 +242,14 @@ Datatables
                     }
                 ],
                 colReorder: true,
-                select: true
+                select: true,
+                language: {
+                    paginate: {
+                        previous: "Précédent",
+                        next: "Suivant"
+                    }
+                }
+
 //                columnDefs: [
 //                    {
 //                        targets: [0,2,3],
