--- a/masks/templates/masks/mask_detail.html
+++ b/masks/templates/masks/mask_detail.html
@@ -37,7 +37,7 @@
             {%  if mask.GDSFile  %}
                 <a href="{{ mask.GDSFile.url }}"> {{mask.GDSFile|filename}} </a>
             {%  else %}
-                No file yet
+                Pas de fichier ...
             {% endif %}
             </td>
         </tr>
