--- a/masks/templates/base.html
+++ b/masks/templates/base.html
@@ -103,7 +103,13 @@ Datatables
 <!-- Static navbar -->
 <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="{% url 'listmask' %}">Masques pour la lithographie optique</a>
+        <img src="/media/images/logos/lab_logo.jpg"
+             style="margin: 0px 10px 0px 0px; max-height: 40px; max-width: 40px;"
+             alt="Logo laboratoire"/>
+        <img src="/media/images/logos/service_logo.jpg"
+             style="margin: 0px 10px 0px 0px; max-height: 40px; max-width: 40px;"
+             alt="Logo service"/>
+  <a class="navbar-brand" href="{% url 'listmask' %}">Masques pour la lithographie optique</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
