--- a/masks/templates/base.html
+++ b/masks/templates/base.html
@@ -104,10 +104,10 @@ Datatables
 <!-- Static navbar -->
 <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <img src="/media/images/logos/lab_logo.jpg"
+        <img src="/static/logos/lab_logo.jpg"
              style="margin: 0px 10px 0px 0px; max-height: 40px; max-width: 40px;"
              alt="Logo laboratoire"/>
-        <img src="/media/images/logos/service_logo.jpg"
+        <img src="/static/logos/service_logo.jpg"
              style="margin: 0px 10px 0px 0px; max-height: 40px; max-width: 40px;"
              alt="Logo service"/>
   <a class="navbar-brand" href="{% url 'listmask' %}">Masques pour la lithographie optique</a>
