--- a/masks/templates/base.html
+++ b/masks/templates/base.html
@@ -103,38 +103,52 @@ Datatables
 
 <!-- Static navbar -->
 <header>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<!--
         <img src="/static/logos/lab_logo.jpg"
              style="margin: 0px 10px 0px 0px; max-height: 40px; max-width: 40px;"
              alt="Logo laboratoire"/>
         <img src="/static/logos/service_logo.jpg"
              style="margin: 0px 10px 0px 0px; max-height: 40px; max-width: 40px;"
              alt="Logo service"/>
-  <a class="navbar-brand" href="{% url 'listmask' %}">Masques pour la lithographie optique</a>
+	<a class="navbar-brand" href="{% url 'listmask' %}">Masques pour la lithographie optique</a>
+-->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'searchmask' %}"> Rechercher <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Voir</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="{% url 'listmask' %}">Masques</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="{% url 'listmotif' %}">Motifs</a>
-                        <a class="dropdown-item" href="{% url 'listmotiftype' %}">Type de motifs</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="{% url 'listusage' %}">Utilisations</a>
-                        <a class="dropdown-item" href="{% url 'listlocalisation' %}">Localisations</a>
-                        <a class="dropdown-item" href="{% url 'listmanufacturer' %}">Fabricants</a>
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+	      <!--                  <a class="nav-link" href="{% url 'searchmask' %}"> Rechercher <span class="sr-only">(current)</span></a>-->
+	      <a class="btn btn-outline-success" href="{% url 'searchmask' %}" role="button">Rechercher</a>
+	    </li>
+	    <li class="nav-item active">
+              <a class="nav-link" href="{% url 'listmask' %}">Masques</a>
+	    </li>
+	    <li class="nav-item">
+              <a class="nav-link" href="{% url 'listmotif' %}">Motifs</a>
+	    </li>
+	    <li class="nav-item">
+              <a class="nav-link" href="{% url 'listmotiftype' %}">Type de motifs</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Autres..</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+		<!--      
+                <a class="dropdown-item" href="{% url 'listmask' %}">Masques</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="{% url 'listmotif' %}">Motifs</a>
+                <a class="dropdown-item" href="{% url 'listmotiftype' %}">Type de motifs</a>
+                <div class="dropdown-divider"></div>
+-->
+                <a class="dropdown-item" href="{% url 'listusage' %}">Utilisations</a>
+                <a class="dropdown-item" href="{% url 'listlocalisation' %}">Localisations</a>
+                <a class="dropdown-item" href="{% url 'listmanufacturer' %}">Fabricants</a>
                     </div>
-                </li>
-                {% if user.is_authenticated %}
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Administration</a>
+            </li>
+            {% if user.is_authenticated %}
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Administration</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="{% url 'createmask' %}">Création d'un masque</a>
                         <div class="dropdown-divider"></div>
@@ -163,7 +177,7 @@ Datatables
 
 
 
-    <main role="main" class="container">
+    <main role="main" class="container-fluid">
         {% block content %}
 
     <!-- Main component for a primary marketing message or call to action -->
