rc for lithomask

--- a/masks/templates/base.html
+++ b/masks/templates/base.html
@@ -176,24 +176,18 @@ Datatables
 </header>
 
 
-
+{% block content %}
     <main role="main" class="container-fluid">
-        {% block content %}
 
-    <!-- Main component for a primary marketing message or call to action -->
-        <div class="jumbotron">
-            <h1>Navbar example</h1>
-            <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It
-            includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-            <p>To see the difference between static and fixed top navbars, just scroll.</p>
-            <p>
-                <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
-            </p>
-        </div>
+      <div class="jumbotron">
+        <h1>Should never be seen</h1>
+        <p>This page should never be seen <p>
+	  
+      </div>
+      
 
-        {% endblock %}
     </main> <!-- /container -->
-
+ {% endblock %}
 
     {% block footer %}
     <footer class="footer">
