--- a/masks/templates/masks/mask_detail.html
+++ b/masks/templates/masks/mask_detail.html
@@ -3,6 +3,7 @@
 {% load thumbnail %}
 {% load mask_utils %}
 {% block content %}
+  <main role="main" class="container">
 
     <div class="jumbotron text-white rounded bg-dark">
         <h1>Mask Detail</h1>
@@ -91,7 +92,7 @@
           </a>
       {% endfor %}
   </div>
-
+</main>
 {% endblock %}
 
 
