--- a/masks/templates/masks/generic_cu.html
+++ b/masks/templates/masks/generic_cu.html
@@ -1,24 +1,26 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="jumbotron text-white rounded bg-dark">
+<main role="main" class="container">
+
+  <div class="jumbotron text-white rounded bg-dark">
     <h1>{{ title }}</h1>
-</div>
-
-<form action="" method="post">
+  </div>
+  
+  <form action="" method="post">
     {%csrf_token%}
-
+    
     {% if isdetail %}
     <fieldset disabled="disabled">
-    {% endif %}
-    {% for error in form.non_field_errors %}
-    <div class="form-group has-errors text-danger small">
+      {% endif %}
+      {% for error in form.non_field_errors %}
+      <div class="form-group has-errors text-danger small">
         {{ error }}
-    </div>
-    {% endfor %}
-
-    {% for field in form %}
+      </div>
+      {% endfor %}
+      
+      {% for field in form %}
     <div class="form-group has-errors text-danger small">
-        {{ field.errors }}
+      {{ field.errors }}
     </div>
     <div class="form-group">
         {{ field.label_tag }}
@@ -179,5 +181,5 @@
     {% endif %}
 {% endcomment %}
 </script>
-
+</main>
 {% endblock %}
