--- a/masks/templates/masks/mask_cu.html
+++ b/masks/templates/masks/mask_cu.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 {% block head %}
+
+
 <link rel="stylesheet" href="https://blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
 <link rel="stylesheet" href="css/jquery.fileupload.css">
 <link rel="stylesheet" href="css/jquery.fileupload-ui.css">
@@ -11,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-
+<main role="main" class="container">
 <div class="jumbotron text-white rounded bg-dark">
     <h1>Mask Creation</h1>
 </div>
@@ -44,7 +46,7 @@
 
 </form>
 
-
+</main>
 {% endblock %}
 
 
