--- a/masks/templates/masks/mask_cu.html
+++ b/masks/templates/masks/mask_cu.html
@@ -14,9 +14,22 @@
 
 {% block content %}
 <main role="main" class="container">
-<div class="jumbotron text-white rounded bg-dark">
-    <h1>Mask Creation</h1>
-</div>
+	<div class="card my-3 bg-dark">
+	  <div class="card-body">
+	    <img src="/static/logos/lab_logo.jpg"
+		 style="margin: 0px 10px 0px 0px; max-height: 150px; max-width: 150px;"
+		 alt="Logo laboratoire"/>
+	    
+	    <a class="navbar-brand" href="{% url 'listmask' %}">
+	      <p class="h1">Mask Creation</p>
+	    </a>
+	    
+	    <img class="float-right"
+		 src="/static/logos/service_logo.jpg"
+		 style="margin: 0px 10px 0px 0px; max-height: 150px; max-width: 150px;"
+		 alt="Logo service"/>
+	  </div>
+	</div>
 <!--
 <form action="{% url 'createmask' %}" id="fileuploadform" method="post" enctype="multipart/form-data">
 -->
