maj boostrap-dualistbox pour raisons de sécurité

--- a/masks/static/bootstrap-duallistbox-master/src/bootstrap-duallistbox.css
+++ b/masks/static/bootstrap-duallistbox-master/src/bootstrap-duallistbox.css
@@ -1,11 +1,3 @@
-/*
- *  Bootstrap Duallistbox - v4.0.1
- *  A responsive dual listbox widget optimized for Twitter Bootstrap. It works on all modern browsers and on touch devices.
- *  http://www.virtuosoft.eu/code/bootstrap-duallistbox/
- *
- *  Made by István Ujj-Mészáros
- *  Under Apache License v2.0 License
- */
 .bootstrap-duallistbox-container .buttons {
   width: 100%;
   margin-bottom: -1px;
@@ -34,22 +26,21 @@
 
 .bootstrap-duallistbox-container .move,
 .bootstrap-duallistbox-container .remove {
-  width: 50%;
-  box-sizing: content-box;
+  width: 60%;
 }
 
 .bootstrap-duallistbox-container .btn-group .btn {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
 }
-.bootstrap-duallistbox-container:not(.moveonselect) select {
+.bootstrap-duallistbox-container select {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
 .bootstrap-duallistbox-container .moveall,
 .bootstrap-duallistbox-container .removeall {
-  width: 50%;
-  box-sizing: content-box;
+  width: 40%;
 }
 
 .bootstrap-duallistbox-container.bs2compatible .btn-group > .btn + .btn {
