--- a/masks/templates/masks/mask_cu.html
+++ b/masks/templates/masks/mask_cu.html
@@ -67,8 +67,8 @@
 
 {# duallistbox #}
 
-<script src="{% static 'bootstrap-duallistbox-4.0.1/dist/jquery.bootstrap-duallistbox.min.js' %}" ></script>
-<link rel="stylesheet" type="text/css" href="{% static 'bootstrap-duallistbox-4.0.1/dist/bootstrap-duallistbox.css' %}">
+<script src="{% static 'bootstrap-duallistbox-master/dist/jquery.bootstrap-duallistbox.min.js' %}" ></script>
+<link rel="stylesheet" type="text/css" href="{% static 'bootstrap-duallistbox-master/dist/bootstrap-duallistbox.css' %}">
 
 <script>
 $("#id_motifs").bootstrapDualListbox({
